Styling and general cleanup of the add property form.

--- a/Odin/Views/Orders/Partials/_Housing.cshtml
+++ b/Odin/Views/Orders/Partials/_Housing.cshtml
@@ -307,11 +307,11 @@
 <!-- Modal -->
 @* using data-backdrop="false" because bootstrap was putting the model under the backdrop and I didn't want to spend the time to fix it *@
 <div class="modal" id="addPropertyModal" tabindex="-1" role="dialog" aria-labelledby="addPropertyModalLabel" data-backdrop="false">
-    <div class="modal-dialog" role="document">
+    <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                <h4 class="modal-title" id="myModalLabel">Add Property</h4>
+                <h5 class="modal-title" id="myModalLabel">Property Information:</h5>
             </div>
                 @{  var property = new Odin.ViewModels.Orders.Transferee.HousingPropertyViewModel();
                     property.OrderId = Model.Id;
