WIP: showing property detail in modal - this includes a photo carousel

--- a/Odin/Content/css/shared/_definitions.scss
+++ b/Odin/Content/css/shared/_definitions.scss
@@ -9,6 +9,7 @@ $DW_Red: #e53c2e;
 $DW_LtPurple: #8d0b56;
 $DW_Gray: #b7a998;
 $DW_Purple: #621f65;
+$DW_Hover: #f5f5f5;
 
 $logoHeight: 3rem;
 $primaryNavHeightLg: $logoHeight + 5rem;
