--- a/Odin/Views/Orders/Partials/_Housing.cshtml
+++ b/Odin/Views/Orders/Partials/_Housing.cshtml
@@ -321,6 +321,20 @@
     </div>
 </div>
 
+<!-- Modal -->
+<div class="modal fade" id="propertyDetailsModal" tabindex="-1" role="dialog" aria-labelledby="propertyDetailsModal" data-backdrop="false">
+    <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            </div>
+            <div id="propertyModalBody" class="modal-body">
+                <!-- Body stuff goes here -->
+            </div>
+        </div>
+    </div>
+</div>
+
 @Styles.Render("~/Styling/housing")
 <script>
     $(document).ready(function () {
