Completed development of the itinerary/appointment requirements. Housing link is awaiting that portion to be merged

--- a/Odin/Content/css/shared/_definitions.scss
+++ b/Odin/Content/css/shared/_definitions.scss
@@ -13,96 +13,7 @@ $DW_Purple: #621f65;
 $logoHeight: 3rem;
 $primaryNavHeightLg: $logoHeight + 5rem;
 $primaryNavHeightSm: $logoHeight + 2rem;
-$sideNavWidth: 18rem; //height of primary nav divided by base font size
-
-
-
-
-
-
-
-
-
-@mixin mobile_header {
-    div#caption {
-        height: 66px !important;
-        padding-top: 20px !important;
-        text-align: center;
-        width: 90% !important;
-        display: block !important;
-
-        div#dwellworks {
-            text-align: center !important;
-        }
-    }
-
-    div#icons {
-        height: 70px !important;
-        text-align: center;
-        padding-top: 0px !important;
-        float: none !important;
-        width: 90% !important;
-        display: block !important;
-        margin-bottom: 0px;
-
-        div {
-            float: none !important;
-
-            &.icons_notify {
-                &.icons_notify_messages {
-                    top: -14px !important;
-                    left: 96px !important;
-                }
-
-                &.icons_notify_alerts {
-                    top: -14px !important;
-                    left: 265px !important;
-                }
-
-                &.icons_notify_appts {
-                    top: -14px !important;
-                    left: 190px !important;
-                }
-            }
-        }
-    }
-}
-
-@mixin logo($topMargin, $align: center, $padleft: 0px) {
-    
-    div#dwellworks {
-        margin-top: $topMargin;
-        text-align: $align;
-        padding-left: $padleft;
-
-        &.mailer {
-            margin-top: 40px;
-        }
-
-        p {
-            display: inline-block;
-
-            &:first-of-type {
-                border-left: 1px solid gray;
-                margin-left: 4px;
-                top: -2px;
-                height: 21px;
-                position: relative;
-            }
-
-            &:last-of-type {
-                top: -3px;
-                font-size: large;
-                color: $DW_Green;
-                font-size: 20px;
-                font-family: sans-serif;
-            }
-        }
-    }
- }
-
-
-
+$sideNavWidth: 18rem; 
 
 
 
