--- a/Odin/Content/css/orders.css
+++ b/Odin/Content/css/orders.css
@@ -8,25 +8,26 @@
 
 div#list {
   height: auto;
-  padding-bottom: 45px; }
+  padding-bottom: 4.5rem; }
   div#list div#search {
     margin-top: 5rem;
-    height: 72px;
-    padding-top: 21px;
-    padding-left: 43px;
-    background-color: #a7ce39; }
+    padding: 2rem 4rem;
+    background-color: #a7ce39;
+    box-sizing: border-box;
+    display: flex;
+    align-items: center; }
     div#list div#search input {
-      width: 300px;
-      max-width: none; }
+      width: 100%;
+      border: none; }
     div#list div#search button {
-      width: 90px;
+      width: auto;
+      padding: 0 1rem;
       color: white;
-      height: 30px;
       border: none;
-      font-size: 15px;
-      margin-left: 15px;
+      font-size: 1.5rem;
+      margin-left: 1.5rem;
       background-color: #31a4dd; }
-    @media screen and (min-width: 40rem) {
+    @media screen and (min-width: 48rem) {
       div#list div#search {
         margin-top: 8rem; } }
   div#list progress {
@@ -72,7 +73,8 @@ div#list {
     font-weight: 500; }
   div#list .progressBar {
     display: block;
-    position: relative; }
+    position: relative;
+    width: 100%; }
     div#list .progressBar progress {
       /* Reset the default appearance */
       -webkit-appearance: none;
@@ -104,6 +106,18 @@ div#list {
       border-color: currentColor; }
     div#list .progressBar .progressCompleted::-ms-fill {
       border-color: currentColor; }
+    div#list .progressBar .progressBar__progress {
+      position: absolute;
+      top: 0;
+      left: 0;
+      height: 2rem; }
+    div#list .progressBar .progressBar__auth {
+      background-color: #ebebeb;
+      width: 100%; }
+    div#list .progressBar .progressBar__sched {
+      background-color: #73c2ed; }
+    div#list .progressBar .progressBar__comp {
+      background-color: #49ae44; }
   @media screen and (min-width: 60rem) {
     div#list li {
       margin: 0rem;
