--- a/Odin/Content/css/orders.scss
+++ b/Odin/Content/css/orders.scss
@@ -14,36 +14,35 @@ body {
 .clickable{
     cursor:pointer;
 }
-//@include header;
 
 div#list {
     height: auto;
-    padding-bottom: 45px;
-    //border-top: 1px solid $top_border_color;
+    padding-bottom: 4.5rem;
+
     div#search {
         margin-top: $primaryNavHeightSm;
-        height: 72px;
-        padding-top: 21px;
-        padding-left: 43px;
+        padding: 2rem 4rem;
         background-color: $DW_Lime;
-        //            background-image: -webkit-gradient(linear, left bottom, left top, color-stop(0.33, rgb(14,173,173)), color-stop(0.67, rgb(0,255,255)));
-        //            background-image: -moz-linear-gradient(center bottom, rgb(14,173,173) 33%, rgb(0,255,255) 67% );
+        box-sizing: border-box;
+        display: flex;
+        align-items: center;
+
         input {
-            width: 300px;
-            max-width: none;
+            width: 100%;
+            border: none;
         }
 
         button {
-            width: 90px;
+            width: auto;
+            padding: 0 1rem;
             color: white;
-            height: 30px;
             border: none;
-            font-size: 15px;
-            margin-left: 15px;
+            font-size: 1.5rem;
+            margin-left: 1.5rem;
             background-color: $DW_Blue;
         }
 
-        @media screen and (min-width: 40rem) {
+        @media screen and (min-width: 48rem) {
             margin-top: $primaryNavHeightLg;
         }
     }
@@ -117,6 +116,7 @@ div#list {
     .progressBar {
         display: block;
         position: relative;
+        width: 100%;
 
         progress {
             /* Reset the default appearance */
@@ -165,6 +165,26 @@ div#list {
 
         .progressCompleted::-ms-fill {
             border-color: currentColor;
+        }
+
+        .progressBar__progress {
+            position: absolute;
+            top: 0;
+            left: 0;
+            height: 2rem;
+        }
+
+        .progressBar__auth {
+            background-color: #ebebeb;
+            width: 100%;
+        }
+
+        .progressBar__sched {
+            background-color: $DW_LtBlue;
+        }
+
+        .progressBar__comp {
+            background-color: $DW_Green;
         }
     }
 
