--- a/Odin/Content/css/transferee/itinerary.scss
+++ b/Odin/Content/css/transferee/itinerary.scss
@@ -3,10 +3,24 @@
 
 
 div#itinerary {
+    .sectionList {
+        list-style: none;
+        margin: 0;
+        padding: 0;
+    }
 
     .event-item {
         margin-top: 4rem;
         margin-bottom: 2rem;
+    }
+
+    .showNewAppointment {
+        margin-top: 2rem;
+        margin-right: 2rem;
+        float: right;
+        border: 1.5px solid #858585;
+        font-size: 1.8rem;
+        color: #858585;
     }
 
 
@@ -16,16 +30,42 @@ div#itinerary {
         margin: 0 0 0 0;
     }
 
+    > .sectionList {
+
+        @media screen and (min-width: 62rem) {
+
+            > li:nth-child(odd) {
+                padding-right: 6rem;
+                clear: left;
+            }
+
+            > li:nth-child(even) {
+                padding-left: 6rem;
+                clear: right;
+            }
+        }
+    }
+
+    .itineraryDayList {
+        list-style: none;
+        padding: 0;
+        margin-top: 2rem;
+    }
+
+
     .dayTitle {
         display: flex;
         align-content: center;
         justify-content: flex-start;
+        margin:0;
+        padding:0;
 
         .dayNumber {
             font-size: 4.8rem;
             font-weight: 700;
             color: #2CBFFC;
             margin: 0 0 0 0;
+            padding:0;
         }
 
         .dayText {
@@ -33,19 +73,20 @@ div#itinerary {
             flex-direction: column;
             align-items: flex-start;
             justify-content: center;
-            margin-left: 10px;
+            margin-left: 0px;
+            padding:0;
         }
 
         .dayName {
             color: #858585;
             font-weight: 500;
-            font-size:1.8rem;
+            font-size: 1.8rem;
         }
 
-        .mmyyyy {
+        .mmmyyyy {
             color: #858585;
             font-weight: 300;
-            font-size:2rem;
+            font-size: 2rem;
         }
     }
 
@@ -54,14 +95,16 @@ div#itinerary {
         font-size: 1.8rem;
         color: #4E4E4E;
         font-weight: 300;
-        margin-left: 10px;
+        margin: 0px;
+        padding:0;
     }
 
     .eventTime {
         font-size: 1.8rem;
         color: #A7CE39;
         font-weight: 500;
-        margin-left: 0px;
+        margin: 0px;
+        padding:0;
         color: $DW_Green;
     }
 }
