--- a/Odin/Content/css/transferee/transferee.css
+++ b/Odin/Content/css/transferee/transferee.css
@@ -1,6 +1,6 @@
 ﻿#orderContainer {
   margin-left: 0 !important;
-  margin-top: 5rem;
+  margin-top: calc(5rem + 6rem);
   width: 100%; }
   @media screen and (min-width: 48rem) {
     #orderContainer {
@@ -14,9 +14,12 @@
         text-align: center;
     }*/ }
 
+.titleGroup {
+  margin-bottom: 5rem; }
+
 .sectionTitle {
   padding-bottom: 0px;
-  margin: 2rem 0 2.5rem 0;
+  margin: 2rem 0 1rem 0;
   font-size: 2.5rem;
   color: #231F20; }
 
@@ -67,4 +70,13 @@
       font-size: 1.5rem;
       font-weight: 400;
       margin: 0; }
+  @media screen and (min-width: 62rem) {
+    .sectionList label.mobileLabel {
+      display: none; } }
+
+#scheduledServices {
+  display: none; }
+  @media screen and (min-width: 62rem) {
+    #scheduledServices {
+      display: block; } }
 
