--- a/Odin/Views/Orders/Index.cshtml
+++ b/Odin/Views/Orders/Index.cshtml
@@ -62,11 +62,11 @@
                     {
                         if (order.Services.ElementAt(i).Selected == true)
                         {
-                            at += 3;
+                            at += 1;
                         }
                         if (order.Services.ElementAt(i).ScheduledDate.HasValue)
                         {
-                            s += 2;
+                            s += 1;
                         }
                         if (order.Services.ElementAt(i).CompletedDate.HasValue)
                         {
@@ -74,15 +74,16 @@
                         }
                     }
                     cwid = (at == 0 ? 0 : c / at * 100);
-                    swid = (at == 0 ? 0 : s / at * 10);
-                    atwid = swid == 0?0:100;
+                    swid = (at == 0 ? 0 : s / at * 100);
+                    atwid = swid == 0?100:100;
 
                 }
             <div class="col-md-2">
                 <label class="header">Completed/Scheduled/Assigned</label>
-                <div class="progressBar" title="Authorized Tasks">
-                    <progress class="progressCompleted" completed="@c" value="10" max="10" title="Completed Tasks" style="width:@Decimal.ToInt32(cwid)%"></progress>
-                    <progress class="progressScheduled" value="@(Decimal.ToInt32(swid))" max="10" title='@(atwid==0?"Authorized Tasks":"Scheduled Tasks")' style="display:inline-block;"></progress>
+                <div class="progressBar" title="Tasks">
+                    <span class="progressBar__progress progressBar__auth" style="width:@Decimal.ToInt32(atwid)%" title="Authorized Tasks"></span>
+                    <span class="progressBar__progress progressBar__sched" style="width:@Decimal.ToInt32(swid)%" title="Scheduled Tasks"></span>
+                    <span class="progressBar__progress progressBar__comp" style="width:@Decimal.ToInt32(cwid)%" title="Completed Tasks"></span>
                 </div>
             </div>
             <div class="col-md-2">
