--- a/Odin/Views/Orders/Partials/_Itinerary.cshtml
+++ b/Odin/Views/Orders/Partials/_Itinerary.cshtml
@@ -1,28 +1,46 @@
 ﻿@model Odin.ViewModels.Orders.Transferee.OrdersTransfereeItineraryViewModel
 
 <div class="container-fluid" data-order-id="@Model.Id" id="itinerary">
-    <h1 class="sectionTitle">
-        Your Itinerary
-        <button type="button" class="btn btn-secondary showNewAppointment" data-toggle="modal" style="float:right" data-target="#appointmentModalNew" >Add Appointment</button>
-    </h1>
-    
-    <p class="sectionInstruction">
-        What is going on. Check to see what you have planned. To stay on top of things.
-    </p>
+@if (Model.mustPrint == true)
+{
+    <img style="margin-top:20px;float:right;" src="@Server.MapPath("~/Content/Images/dwellworks_icon.png")">
+}
+    <div class="row">
+        <div class="col-md-6 titleGroup">
+            <h1 class="sectionTitle">
+                Your Itinerary
+            </h1>
+            <p class="sectionInstruction">
+                What is going on. Check to see what you have planned. To stay on top of things.
+            </p>
+        </div>
+        @if (Model.mustPrint == false)
+        {
+            <div class="col-md-6">
+                <button type="button" class="btn btn-secondary showNewAppointment" data-toggle="modal" data-target="#appointmentModalNew">Add Appointment</button>
+                <button type="button" class="btn btn-secondary showNewAppointment" id="cmdEmail">Email to Transferee</button>
+                <button type="button" class="btn btn-secondary showNewAppointment" id="cmdPDF">Generate PDF</button>
+            </div>
+        }
+        else
+        {
+            <div class="col-md-6"></div>
+        }
+    </div>
     <ul class="sectionList event-item row" data-entity-id="@Model.Id">
         @for (int i = 0; i < Model.Itinerary.Count(); i++)
         {
             var elem = Model.Itinerary.ElementAt(i);
             string link = "";
             DateTime? dt = (DateTime?)(elem).ScheduledDate;
-                        
+
             string id = Model.Id;
             if (Model.Itinerary.ElementAt(i).ItemType.Contains("Service"))
             {
                 link = "$('.item[data-panel=details]').trigger('click');";
                 if (!dt.HasValue)
                 {
-                    break;
+                    continue;
                 }
             }
             else if (Model.Itinerary.ElementAt(i).ItemType.Contains("Appointment"))
@@ -38,19 +56,18 @@
 
                 @if (ViewBag.SameAs == null || DateTime.Parse(ViewBag.SameAs.ToString()).ToShortDateString() != dt.Value.ToShortDateString())
                 {
-
                     ViewBag.SameAs = dt;
-                    <div class="dayTitle">
-                        <h2 class="dayNumber">
+                    <div class="dayTitle row">
+                        <h2 class="dayNumber col-md-2" >
                             @(dt.HasValue ? dt.Value.ToString("dd") : "NA")
                         </h2>
-                        <div class="dayText">
+                        <div class="dayText col-md-10">
                             <p class="dayName"><span>@(dt.HasValue ? dt.Value.ToString("dddd") : "NA")</span></p>
-                            <p class="mmyyyy">@(dt.HasValue ? dt.Value.ToString("MMMM yyyy") : "NA")</p>
+                            <p class="mmmyyyy">@(dt.HasValue ? dt.Value.ToString("MMMM yyyy") : "NA")</p>
                         </div>
-                    </div>                        
+                    </div>
                 }
-                <ul class="sectionList">
+                <ul class="itineraryDayList">
                     @for (int j = i; j < Model.Itinerary.Count(); j++)
                     {
                         string al = (string)(Model.Itinerary.ElementAt(j)).ActionLabel;
@@ -58,58 +75,61 @@
                         if (dt2.Value.ToShortDateString() == dt.Value.ToShortDateString())
                         {
                             i++;
-                    <li>
-                            @if (Model.Itinerary.ElementAt(j).ItemType.Contains("Appointment"))
-                            {
-                                <div class="modal fade" id="appointmentModal@(j.ToString())" tabindex="-100" role="dialog" data-backdrop="static" aria-labelledby="appointmentModalLabel" aria-hidden="true" style="z-index: 2147483647;">
-                                    <div class="modal-dialog" role="document" data-appointment-id="@Model.Itinerary.ElementAt(j).Id" data-url='@Url.Action("appointmentPartial")/@Model.Itinerary.ElementAt(j).Id' id="appointment" style="z-index: 2147483647;">
-                                        <div class="modal-content">
-                                            <div class="modal-header">
-                                                <h5 class="modal-title" id="appointmentModalLabel">Appointment</h5>
-                                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                                    <span aria-hidden="true">&times;</span>
-                                                </button>
-                                            </div>
-                                            <div class="modal-body"></div>
-                                            <div class="modal-footer row">
-                                                <div class="col-md-3">
-                                                    @*<button type="button" class="btn btn-secondary new">new</button>*@
+                            <li class="">
+                                @if (Model.Itinerary.ElementAt(j).ItemType.Contains("Appointment"))
+                                {
+                                    <div class="modal fade" id="appointmentModal@(j.ToString())" tabindex="-100" role="dialog" data-backdrop="static" aria-labelledby="appointmentModalLabel" aria-hidden="true" style="z-index: 2147483647;">
+                                        <div class="modal-dialog" role="document" data-appointment-id="@Model.Itinerary.ElementAt(j).Id" data-url='@Url.Action("appointmentPartial")/@Model.Itinerary.ElementAt(j).Id' id="appointment" style="z-index: 2147483647;">
+                                            <div class="modal-content">
+                                                <div class="modal-header">
+                                                    <h5 class="modal-title" id="appointmentModalLabel">Appointment</h5>
+                                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                                        <span aria-hidden="true">&times;</span>
+                                                    </button>
                                                 </div>
-                                                <div class="col-md-3">
-                                                    <button type="button" class="btn btn-primary save">Save</button>
-                                                </div>
-                                                <div class="col-md-3">
-                                                    <button type="button" class="btn btn-secondary delete" data-dismiss="modal">Delete</button>
-                                                </div>
-                                                <div class="col-md-3">
-                                                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                                                <div class="modal-body"></div>
+                                                <div class="modal-footer row">
+                                                    <div class="col-sm-3">
+                                                        @*<button type="button" class="btn btn-secondary new">new</button>*@
+                                                    </div>
+                                                    <div class="col-sm-3">
+                                                        <button type="button" class="btn btn-primary save">Save</button>
+                                                    </div>
+                                                    <div class="col-sm-3">
+                                                        <button type="button" class="btn btn-secondary delete" data-dismiss="modal">Delete</button>
+                                                    </div>
+                                                    <div class="col-sm-3">
+                                                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                                                    </div>
                                                 </div>
                                             </div>
                                         </div>
                                     </div>
-                                </div>
-                                    <div class="bd-example">
-                                        <a id="showAppointment" class="showAppointment" data-toggle="modal" data-target="#appointmentModal@(j.ToString())"><span class="eventTime">@(dt2.HasValue ? dt2.Value.ToString("hh:mm tt") : "NA")</span>&nbsp;<span class="eventNote">@al</span></a>
-                                    </div>
-                            }
-                            else
-                            {
-                                <a onclick="@link"><span class="eventTime">@(dt2.HasValue ? dt2.Value.ToString("hh:mm tt") : "NA")</span>&nbsp;<span class="eventNote">@al</span></a>
-                            }
-                    </li>
+
+                                    <a id="showAppointment" class="showAppointment row" data-toggle="modal" data-target="#appointmentModal@(j.ToString())">
+                                        <span class="eventTime col-md-2">@(dt2.HasValue ? dt2.Value.ToString("hh:mm tt") : "NA")</span><span class="eventNote col-md-10">&nbsp;@al</span>
+                                    </a>
+                                }
+                                else
+                                {
+                                    <a class="row" onclick="@link">
+                                        <span class="eventTime col-md-2">@(dt2.HasValue ? dt2.Value.ToString("hh:mm tt") : "NA")</span><span class="eventNote col-md-10">&nbsp;@al</span>
+                                    </a>
+                                }
+
+                            </li>
                         }
                         else
                         {
-                            i = j-1;
-                             break;
+                            i = j - 1;
+                            break;
                         }
                     }
                 </ul>
                 <hr>
-            </li>
-
+            </li>            
         }
-    </ul>
+</ul>
     <div class="modal fade" id="appointmentModalNew" tabindex="-100" role="dialog" data-backdrop="static" aria-labelledby="appointmentModalLabel" aria-hidden="true" style="z-index: 2147483647;">
         <div class="modal-dialog" role="document" data-appointment-id="" data-url='@Url.Action("appointmentPartial")/' id="appointment" style="z-index: 2147483647;">
             <div class="modal-content">
@@ -134,49 +154,16 @@
             </div>
         </div>
     </div>
-    <div id="editor"></div>
-    <button id="cmdEmail">Email to Transferee</button>
-    <button id="cmdPDF">Generate PDF</button>
     <hr>
-        </div>
+</div>
+
+
         
                 @Styles.Render("~/Styling/itinerary")
 
 <script type="text/javascript">
 
     $(document).ready(function () {
-        //TransfereeAppointmentController.init;
-        var doc = new jsPDF();
-        var specialElementHandlers = {
-            '#editor': function (element, renderer) {
-                return true;
-            }
-        };
-        $('#cmdPDF').click(function () {
-            doc.fromHTML($('#itinerary').html(), 15, 15, {
-                'width': 170,
-                'elementHandlers': specialElementHandlers
-            });
-            var nm = $('.eeName').text().replace(/ /g, "").replace(/\./g, "");
-            doc.save(nm + '_Itinerary.pdf');
-        });
-        $('.showAppointment').click(function () {
-            var app = $(this).parent().parent().find('#appointment');
-            var url = app.data('url');
-            $.get(url, function (data) {
-                app.find('.modal-body').html(data);
-            });
-        });
-        $('.showNewAppointment').click(function () {
-            var app = $("#appointmentModalNew");            
-            var url = '/orders/appointmentPartial/';
-            $.get(url, function (data) {
-                app.find('.modal-body.new').html(data);
-            });           
-        });
-        $(".new").click(function (e) {
-            e.stopPropagation();
-            return false;
-        })
-    });
+        TransfereeItineraryController.init();        
+    });   
 </script>
