--- a/Odin/Views/BookMarklet/Add.cshtml
+++ b/Odin/Views/BookMarklet/Add.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@model Odin.ViewModels.BookMarklet.BookMarkletAddViewModel
+@{
     Layout = "~/Views/BookMarklet/Shared/_BookMarklet.cshtml";
 }
 
@@ -8,4 +9,6 @@
         The property has been added!  It should appear under the transferee shortly!
     </h5>
 </div>
-
+<div class="bm-btn-container">
+    @Html.ActionLink("Go To Order", "Transferee", "Orders", new {Id = Model.OrderId}, new { @class = "btn btn-default btn-lg", target = "_blank" })
+</div>
