--- a/Odin/Views/BookMarklet/Error.cshtml
+++ b/Odin/Views/BookMarklet/Error.cshtml
@@ -1,13 +1,10 @@
-﻿@{
+﻿
+@model Odin.ViewModels.BookMarklet.BookMarkletErrorViewModel
+@{
     Layout = "~/Views/BookMarklet/Shared/_BookMarklet.cshtml";
 }
 <div class="bm-container">
-    <h3 class="bm-message">Welcome!</h3>
-    <h5 class="bm-message">
-        Please sign in and refresh this page to continue!
-    </h5>
-</div>
-<div class="bm-btn-container">
-    @Html.ActionLink("Sign In", "Login" ,"Account", null, new {@class= "btn btn-default btn-lg", target="_blank" })
+    <h3 class="bm-message bm-header">@Model.Header</h3>
+    <h5 class="bm-message">@Model.Message</h5>
 </div>
 
