--- a/Odin/Content/css/transferee/housing.scss
+++ b/Odin/Content/css/transferee/housing.scss
@@ -97,7 +97,7 @@
 
 .propertyItem {
     margin: 0 0 0 0;
-    padding: 0 0 0 0;
+    padding: 0.5rem 0 0.5rem 0;
 
     &:hover {
         background-color: $DW_Hover;
@@ -159,5 +159,11 @@
     select,
     textarea {
         max-width: 100%;
+    }
+}
+
+#propertyDetailsModal {
+    h5 {
+        color: $DW_LtPurple;
     }
 }
