--- a/Odin/Views/Orders/Partials/_PropertyDetails.cshtml
+++ b/Odin/Views/Orders/Partials/_PropertyDetails.cshtml
@@ -1,78 +1,47 @@
 ﻿@model Odin.ViewModels.Orders.Transferee.HousingPropertyViewModel
 
 <div class="container-fluid">
+    <h5><strong>Available on:</strong> @Html.DisplayFor(model => model.PropertyAvailabilityDate)</h5>
     <div class="row">
         <div class="col-md-8">
             @Html.DisplayFor(p => p.PropertyPhotos)
         </div>
 
-        <dl class="dl-vertical col-md-4">
+        <div class="col-md-4">
+            <ul class="row sectionList">
+                <li class="col-md-12">
+                    <label>@Html.DisplayNameFor(model => model.PropertyAddress)</label>
+                    <p>@Html.DisplayFor(model => model.PropertyAddress)</p>
+                </li>
 
-            <div class="row">
-                <div class="col-md-12">
-                    <dt>
-                        @Html.DisplayNameFor(model => model.PropertyAddress)
-                    </dt>
+                <li class="col-md-6">
+                    <label>@Html.DisplayNameFor(model => model.PropertyNumberOfBedrooms)</label>
+                    <p>@Html.DisplayFor(model => model.PropertyNumberOfBedrooms)</p>
+                </li>
+                <li class="col-md-6">
+                    <label>@Html.DisplayNameFor(model => model.PropertyNumberOfBathrooms)</label>
+                    <p>@Html.DisplayFor(model => model.PropertyNumberOfBathrooms)</p>
+                </li>
 
-                    <dd>
-                        @Html.DisplayFor(model => model.PropertyAddress)
-                    </dd>
-                </div>
-            </div>
+                <li class="col-md-6">
+                    <label>@Html.DisplayNameFor(model => model.PropertySquareFootage)</label>
+                    <p>@Html.DisplayFor(model => model.PropertySquareFootage)</p>
+                </li>
+                <li class="col-md-6">
+                    <label>@Html.DisplayNameFor(model => model.PropertyAmount)</label>
+                    <p>@Html.DisplayFor(model => model.PropertyAmount)</p>
+                </li>
+            </ul>
+        </div>
 
-            <div class="row">
-                <div class="col-md-6">
-                    <dt>
-                        @Html.DisplayNameFor(model => model.PropertyNumberOfBedrooms)
-                    </dt>
-
-                    <dd>
-                        @Html.DisplayFor(model => model.PropertyNumberOfBedrooms)
-                    </dd>
-                </div>
-                <div class="col-md-6">
-                    <dt>
-                        @Html.DisplayNameFor(model => model.PropertyNumberOfBathrooms)
-                    </dt>
-
-                    <dd>
-                        @Html.DisplayFor(model => model.PropertyNumberOfBathrooms)
-                    </dd>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-6">
-                    <dt>
-                        @Html.DisplayNameFor(model => model.PropertySquareFootage)
-                    </dt>
-
-                    <dd>
-                        @Html.DisplayFor(model => model.PropertySquareFootage)
-                    </dd>
-                </div>
-
-                <div class="col-md-6">
-                    <dt>
-                        @Html.DisplayNameFor(model => model.PropertyAmount)
-                    </dt>
-
-                    <dd>
-                        @Html.DisplayFor(model => model.PropertyAmount)
-                    </dd>
-                </div>
-            </div>
-        </dl>
 
         <div class="col-md-12">
-            <dl>
-                <dt>
-                    @Html.DisplayNameFor(model => model.PropertyDescription)
-                </dt>
-
-                <dd>
-                    @Html.DisplayFor(model => model.PropertyDescription)
-                </dd>
-            </dl>
+            <ul class="row sectionList">
+                <li class="col-md-12">
+                    <label>@Html.DisplayNameFor(model => model.PropertyDescription)</label>
+                    <p>@Html.DisplayFor(model => model.PropertyDescription)</p>
+                </li>
+            </ul>
         </div>
     </div>
 </div>
