Added unit and integration tests for Itinerary and Appointments, also fixed left nav and added back button

--- a/Odin/Content/css/forgotpassword.scss
+++ b/Odin/Content/css/forgotpassword.scss
@@ -3,40 +3,40 @@
 
 body {
     padding-top: 0px;
-    background-image: url("/Content/Images/bg_gradient_forgot_password.png"); 
-    
+    background-image: url("/Content/Images/bg_gradient_forgot_password.png");
+
     @media (max-width: 768px) {
         background-image: none;
         background-color: white;
-    }   
-}
-
-.text-danger{
-    ul{
-        list-style-type:none;
     }
 }
 
-div.container.body-content {    
+.text-danger {
+    ul {
+        list-style-type: none;
+    }
+}
+
+div.container.body-content {
     padding-top: 50px;
 
-    @media (max-width: 768px){
-        padding-top:0px;
+    @media (max-width: 768px) {
+        padding-top: 0px;
         margin-top: 0px;
     }
-    
-    div.col-lg-6 {       
+
+    div.col-lg-6 {
         text-align: center;
         background-color: white;
 
         &.mailer {
             border: 1px solid;
-        }        
+        }
 
         div#group-blk {
             margin: auto;
             padding-left: 25px;
-            padding-right:25px;
+            padding-right: 25px;
             padding-top: 45px;
             text-align: center;
 
@@ -129,7 +129,7 @@ div.container.body-content {
 
         div#caption {
             margin-top: 0px;
-            padding-top:30px;
+            padding-top: 30px;
             font-size: 36px;
             line-height: 50px;
             font-family: sans-serif;
@@ -146,8 +146,25 @@ div.container.body-content {
                 color: $DW_Blue;
             }
         }
+
+        #logo {
+            display: flex;
+            justify-content: center;
+            height: 3rem;
+            align-items: center;
+            margin-bottom: 3rem;
+
+
+            #logoImage {
+                margin-right: 1rem;
+                padding-right: 1rem;
+                border-right: 1px solid $DW_Gray;
+            }
+
+            #logoOdin {
+                color: $DW_Green;
+                font-size: 1.75rem;
+            }
+        }
     }
-
-    //@include logo(30px);
 }
-
