--- a/Odin/Views/Account/ForgotPassword.cshtml
+++ b/Odin/Views/Account/ForgotPassword.cshtml
@@ -35,7 +35,10 @@
             </div>
         }
 
-        @Html.Partial("~/Views/Shared/Partials/_logo.cshtml")
+        <div id="logo">
+            <img id="logoImage" src="~/Content/Images/dwellworks_icon.png" />
+            <span id="logoOdin">Odin</span>
+        </div>
     </div>
 </div>
 <input type="hidden" id="hdnMessage" value="@Html.Raw(ViewBag.Message != null ? ViewBag.Message : "")"/>
