--- a/Odin/Content/css/forgotpassword.css
+++ b/Odin/Content/css/forgotpassword.css
@@ -98,4 +98,17 @@ div.container.body-content {
         margin-top: 14px; }
       div.container.body-content div.col-lg-6 div#caption span#email, div.container.body-content div.col-lg-6 div#caption span#pw {
         color: #31a4dd; }
+    div.container.body-content div.col-lg-6 #logo {
+      display: flex;
+      justify-content: center;
+      height: 3rem;
+      align-items: center;
+      margin-bottom: 3rem; }
+      div.container.body-content div.col-lg-6 #logo #logoImage {
+        margin-right: 1rem;
+        padding-right: 1rem;
+        border-right: 1px solid #b7a998; }
+      div.container.body-content div.col-lg-6 #logo #logoOdin {
+        color: #49ae44;
+        font-size: 1.75rem; }
 
