--- a/Odin/Content/css/login.scss
+++ b/Odin/Content/css/login.scss
@@ -5,77 +5,85 @@ body {
     padding-top: 0px;
 }
 
+
 div.container.body-content {
-    width: auto;
+    width: 100%;
     padding-right: 0px;
+    margin: 0 0;
 
-    div.row {
-        margin: 0px;
-        height: 886px;
-        max-width: 100%;
-        max-height: 100%;
-        overflow: hidden;
-    }
+    .loginWrap {
+        background-image: url('../Images/bg_img_w_gradient.png');
+        background-position: center;
+        background-size: cover;
 
-    div.col-md-4 {
-        height: 852px;
-        margin-top: 32px;
-
-        @media screen and (max-width: 992px) {
-            padding-right: 120px;
-        }
-
-        div#caption {
-            line-height: 44px;
-            padding-top: 60px;
-            font-size: xx-large;
-            text-align: center;
-            margin-bottom: 97px;
-
-            span#Odin {
-                color: $DW_Green;
-            }
-        }
-    }
-
-    div.col {
-        width: 66%;
-        max-height: 884px;
-        overflow: hidden;
-        position: relative;
-        display: inline-block;
-
-        @media screen and (max-width: 992px) {
-            display: none;
-        }
-
-        p {
+        div.row {
             margin: 0px;
+            height: 100vh;
+            width: 100%;
+            overflow: hidden;
         }
 
-        img {
-            width: 223%;
-        }
+        div.col-md-4 {
+            height: 100vh;
+            background-color: white;
 
-        div#labels-box {
-            color: white;
-            position: absolute;
-            top: 150px;
-            left: 186px;
-        }
-
-        div.text-lables {
-            &:nth-child(1) {
-                line-height: 62px;
-                font-family: sans-serif;
-                font-size: 50px;
-                font-weight: bold;
+            @media screen and (max-width: 48rem) {
+                /*padding-right: 120px;*/
             }
 
-            &:nth-child(2) {
-                margin-top: 40px;
-                font-size: 24px;
-                line-height: 30px;
+            div#caption {
+                line-height: 44px;
+                padding-top: 60px;
+                font-size: xx-large;
+                text-align: center;
+                margin-bottom: 97px;
+
+                #logo {
+                    display: flex;
+                    justify-content: center;
+                    height: 3rem;
+                    align-items: center;
+                    margin-bottom: 3rem;
+
+
+                    #logoImage {
+                        margin-right: 1rem;
+                        padding-right: 1rem;
+                        border-right: 1px solid $DW_Gray;
+                    }
+
+                    #logoOdin {
+                        color: $DW_Green;
+                        font-size: 1.75rem;
+                    }
+                }
+
+                span#Odin {
+                    color: $DW_Green;
+                }
+            }
+        }
+
+        .col-md-8 {
+            position: relative;
+            height: 100vh;
+
+            .loginCopyWrap {
+                color: white;
+                position: absolute;
+                top: 10vh;
+                left: 10%;
+                width: 50%;
+
+                .head{
+                    font-weight: 600;
+                    font-size: 2.5rem;
+                    line-height: 3rem;
+                }
+
+                .copy{
+                    font-size: 2rem;
+                }
             }
         }
     }
@@ -94,7 +102,6 @@ div.container.body-content {
 
         div.passwd {
             text-align: center;
-            margin-top: 116px;
             margin-left: 0px;
             padding: 0px;
             width: 100%;
@@ -119,7 +126,6 @@ div.container.body-content {
     p#forgot {
         text-align: center;
     }
-
     //@include logo(196px);
 }
 
