--- a/Odin/Content/css/transferee/transferee.css
+++ b/Odin/Content/css/transferee/transferee.css
@@ -45,7 +45,7 @@
   margin: 1rem 0 0 0;
   padding: 0; }
   .sectionList li {
-    margin: 0 0 1rem 0;
+    margin-bottom: 1rem;
     padding: 0; }
     .sectionList li label {
       display: block;
