--- a/Odin/Views/Orders/Partials/_Itinerary.cshtml
+++ b/Odin/Views/Orders/Partials/_Itinerary.cshtml
@@ -1,17 +1,23 @@
 ﻿@model Odin.ViewModels.Orders.Transferee.OrdersTransfereeItineraryViewModel
 
 <div class="container-fluid" data-order-id="@Model.Id" id="itinerary">
-@if (Model.mustPrint == true)
-{
-    <img style="margin-top:20px;float:right;" src="@Server.MapPath("~/Content/Images/dwellworks_icon.png")">
-}
+    @if (Model.IsPdf == true)
+    {
+        <img style="margin-top:20px;float:right;" src="@Server.MapPath("~/Content/Images/dwellworks_icon.png")">
+    }
     <div class="row">
         <div class="col-md-6 titleGroup">
-            @if (Model.mustPrint == true)
+            @if (Model.IsPdf == true)
             {
                 <h3 class="sectionTitle" style="padding-top:10px;">
                     @(Model.TransfereeName + "'s Itinerary")
                 </h3>
+
+                <style>
+                    ul.itineraryDayList{
+                        margin-left: 1.5rem;
+                    }
+                </style>
             }
             else
             {
@@ -23,11 +29,11 @@
                 What is going on. Check to see what you have planned. To stay on top of things.
             </p>
         </div>
-        @if (Model.mustPrint == false)
+        @if (Model.IsPdf == false)
         {
             <div class="col-md-6">
-                <button type="button" class="btn btn-secondary showNewAppointment" data-toggle="modal" data-target="#appointmentModalNew">Add Appointment</button>
-                <button type="button" class="btn btn-secondary showNewAppointment" id="cmdEmail">Email to Transferee</button>
+                <button type="button" class="btn btn-secondary showNewAppointment" id="cmdNew" data-toggle="modal" data-target="#modalForm">Add Appointment</button>
+                <button type="button" class="btn btn-secondary showNewAppointment" id="cmdEmail" data-toggle="modal" data-target="#modalForm">Email</button>
                 <button type="button" class="btn btn-secondary showNewAppointment" id="cmdPDF">Generate PDF</button>
             </div>
         }
@@ -61,13 +67,13 @@
                 link = "$('.item[data-panel=housing]').trigger('click');";
             }
 
-            <li class="col-md-6">
+            <li class="itineraryDay">
 
                 @if (ViewBag.SameAs == null || DateTime.Parse(ViewBag.SameAs.ToString()).ToShortDateString() != dt.Value.ToShortDateString())
                 {
                     ViewBag.SameAs = dt;
                     <div class="dayTitle row">
-                        <h2 class="dayNumber col-md-2" >
+                        <h2 class="dayNumber col-md-2">
                             @(dt.HasValue ? dt.Value.ToString("dd") : "NA")
                         </h2>
                         <div class="dayText col-md-10">
@@ -86,43 +92,15 @@
                             i++;
                             <li class="">
                                 @if (Model.Itinerary.ElementAt(j).ItemType.Contains("Appointment"))
-                                {
-                                    <div class="modal fade" id="appointmentModal@(j.ToString())" tabindex="-100" role="dialog" data-backdrop="static" aria-labelledby="appointmentModalLabel" aria-hidden="true" style="z-index: 2147483647;">
-                                        <div class="modal-dialog" role="document" data-appointment-id="@Model.Itinerary.ElementAt(j).Id" data-url='@Url.Action("appointmentPartial")/@Model.Itinerary.ElementAt(j).Id' id="appointment" style="z-index: 2147483647;">
-                                            <div class="modal-content">
-                                                <div class="modal-header">
-                                                    <h5 class="modal-title" id="appointmentModalLabel">Appointment</h5>
-                                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                                        <span aria-hidden="true">&times;</span>
-                                                    </button>
-                                                </div>
-                                                <div class="modal-body"></div>
-                                                <div class="modal-footer row">
-                                                    <div class="col-sm-3">
-                                                        @*<button type="button" class="btn btn-secondary new">new</button>*@
-                                                    </div>
-                                                    <div class="col-sm-3">
-                                                        <button type="button" class="btn btn-primary save">Save</button>
-                                                    </div>
-                                                    <div class="col-sm-3">
-                                                        <button type="button" class="btn btn-secondary delete" data-dismiss="modal">Delete</button>
-                                                    </div>
-                                                    <div class="col-sm-3">
-                                                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-
-                                    <a id="showAppointment" class="showAppointment row" data-toggle="modal" data-target="#appointmentModal@(j.ToString())">
-                                        <span class="eventTime col-md-2">@(dt2.HasValue ? dt2.Value.ToString("hh:mm tt") : "NA")</span><span class="eventNote col-md-10">&nbsp;@al</span>
+                                {                                    
+                                    <a id="showAppointment" class="showAppointment row" data-appointment-id="@Model.Itinerary.ElementAt(j).Id" data-toggle="modal" data-target="#modalForm">
+                                        <span class="eventTime col-sm-12 col-md-2">@(dt2.HasValue ? dt2.Value.ToString("hh:mm tt") : "NA")&nbsp;</span><span class="eventNote col-sm-12 col-md-10">@al</span>
                                     </a>
                                 }
                                 else
                                 {
                                     <a class="row" onclick="@link">
-                                        <span class="eventTime col-md-2">@(dt2.HasValue ? dt2.Value.ToString("hh:mm tt") : "NA")</span><span class="eventNote col-md-10">&nbsp;@al</span>
+                                        <span class="eventTime col-sm-12 col-md-2">@(dt2.HasValue ? dt2.Value.ToString("hh:mm tt") : "NA")&nbsp;</span><span class="eventNote col-sm-12 col-md-10">@al</span>
                                     </a>
                                 }
 
@@ -136,40 +114,36 @@
                     }
                 </ul>
                 <hr>
-            </li>            
+            </li>
         }
-</ul>
-    <div class="modal fade" id="appointmentModalNew" tabindex="-100" role="dialog" data-backdrop="static" aria-labelledby="appointmentModalLabel" aria-hidden="true" style="z-index: 2147483647;">
-        <div class="modal-dialog" role="document" data-appointment-id="" data-url='@Url.Action("appointmentPartial")/' id="appointment" style="z-index: 2147483647;">
+    </ul>
+    <div class="modal fade appointmentModal" id="modalForm" tabindex="-100" role="dialog" data-backdrop="static" aria-labelledby="appointmentModalLabel" aria-hidden="true" style="z-index: 2147483647;">
+        <div class="modal-dialog" role="document" id="appointment" style="z-index: 2147483647;">
             <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="appointmentModalLabel">Appointment</h5>
+                <div class="modal-header row">
+                    <h5 class="modal-title" id="appointmentModalLabel"></h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
-                <div class="modal-body new"></div>
+                <div class="modal-body"></div>
                 <div class="modal-footer row">
-                    <div class="col-md-6">
-                        @*<button type="button" class="btn btn-secondary new">new</button>*@
+                    <div class="col-sm-6">
+                        
                     </div>
-                    <div class="col-md-3">
+                    <div class="col-sm-3">
+                        <button type="button" class="btn btn-secondary delete" data-dismiss="modal">Delete</button>
+                    </div>
+                    <div class="col-sm-3">
                         <button type="button" class="btn btn-primary save">Save</button>
-                    </div>
-                    <div class="col-md-3">
-                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    <hr>
-</div>
-        
-                @Styles.Render("~/Styling/itinerary")
-
+</div>                
+@Styles.Render("~/Styling/itinerary")
 <script type="text/javascript">
-
     $(document).ready(function () {
         TransfereeItineraryController.init();        
     });   
