--- a/Odin/Views/Orders/Transferee.cshtml
+++ b/Odin/Views/Orders/Transferee.cshtml
@@ -5,6 +5,7 @@
     }
 
     <nav class="navbar navbar-default" id="transfereeSideNav">
+        
         <div class="container-fluid navWrapper">
             <div class="navbar-header transfereeSideNav__person">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
@@ -14,7 +15,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <div class="navbar-brand" href="#">
-                    <img class="person" src="~/Content/Images/icn_person.png" />
+                    @*<img class="person" src="~/Content/Images/icn_person.png" />*@
                     <p class="eeName">@Model.Transferee.FullName</p>
                     @Html.HiddenFor(Model => Model.Transferee.Email, new {id="TransfereeEmail"})
                 </div>
@@ -33,34 +34,48 @@
                     <p class="eeDetails">@Model.Rmc</p>
                     <p class="eeDetails">@Model.Client</p>
                 </div>
-                <hr class="transfereeSideNav__rule" />
                 <ul class="nav navbar-nav">
+                    <hr class="transfereeSideNav__rule" />
+
                     <li class="item selected nav-item" data-panel="intake">
-                        <img src="~/Content/Images/icn_intake.png" />
-                        <label>Intake</label>
+                        <a href="#intake">
+                            <img src="~/Content/Images/icn_intake.png" />
+                            <label>Intake</label>
+                       </a>
                     </li>
                     <li class="item nav-item" data-panel="details">
-                        <img src="~/Content/Images/icn_details.png" />
-                        <label>Details</label>
+                        <a href="#details">
+                            <img src="~/Content/Images/icn_details.png" />
+                            <label>Details</label>
+                        </a>
                     </li>
                     <li class="item nav-item" data-panel="housing">
-                        <img src="~/Content/Images/icn_housing.png" />
-                        <label>Housing</label>
+                        <a href="#housing">
+                            <img src="~/Content/Images/icn_housing.png" />
+                            <label>Housing</label>
+                        </a>
                     </li>
                     <li class="item nav-item" data-panel="history">
-                        <img src="~/Content/Images/icn_history.png" />
-                        <label>History</label>
+                        <a href="#history">
+                            <img src="~/Content/Images/icn_history.png" />
+                            <label>History</label>
+                        </a>
                     </li>
                     <hr class="transfereeSideNav__rule" />
                     <li class="item nav-item" data-panel="messages">
-                        <img src="~/Content/Images/icn_internal_messages.png" />
-                        <label>Messages</label>
+                        <a href="#messages">
+                            <img src="~/Content/Images/icn_internal_messages.png" />
+                            <label>Messages</label>
+                        </a>
                     </li>
                     <li class="item nav-item" data-panel="itinerary">
-                        <img src="~/Content/Images/icn_internal_itinerary.png" />
-                        <label>Itinerary</label>
+                        <a href="#itinerary">
+                            <img src="~/Content/Images/icn_internal_itinerary.png" />
+                            <label>Itinerary</label>
+                        </a>
                     </li>
                 </ul>
+                <span id="backButton">BACK TO LIST</span>
             </div>
         </div>
     </nav>
@@ -79,6 +94,11 @@
             var currentOrderId = '@Model.Id';
             $(document).ready(function () {
                 OrdersPageController.TransfereeInit();
+
+                $('#backButton').click(function () {
+                    window.location.href = "/orders";
+                })
             });
+
         </script>
     }
