Being more explicit about the actions for create and delete.

--- a/Odin/Views/Shared/EditorTemplates/CreateHousingProperty.cshtml
+++ b/Odin/Views/Shared/EditorTemplates/CreateHousingProperty.cshtml
@@ -1,8 +1,9 @@
 ﻿@model Odin.ViewModels.Orders.Transferee.HousingPropertyViewModel
 
-@using (Html.BeginForm("", "HomeFindingProperties",
-                                                                new { ReturnUrl = ViewBag.ReturnUrl },
-                                                                FormMethod.Post, new { id = "propertyForm", enctype = "multipart/form-data" }))
+@using (Html.BeginForm("Create", 
+                       "HomeFindingProperties",
+                       new { ReturnUrl = ViewBag.ReturnUrl },
+                       FormMethod.Post, new { id = "propertyForm", enctype = "multipart/form-data" }))
 {
     <div class="modal-body">
 
