Refactored the propter details partial to be more specific that it should be in a modal

--- a/Odin/Views/Orders/Partials/_HousingProperties.cshtml
+++ b/Odin/Views/Orders/Partials/_HousingProperties.cshtml
@@ -75,7 +75,7 @@
         $('.propertyItem').click(function (event) {
             var propertyId = $(event.delegateTarget).data("property-id");
             var propertyModalUrl = '/homefindingproperties/propertypartial/' + propertyId;
-            $('#propertyModalBody').load(propertyModalUrl, function (response, status, xhr) {
+            $('#propertyModalContent').load(propertyModalUrl, function (response, status, xhr) {
                 if (status == "success") {
                     $('#propertyDetailsModal').modal('show');
                 }
