--- a/Odin/Views/Shared/EditorTemplates/CreateHousingProperty.cshtml
+++ b/Odin/Views/Shared/EditorTemplates/CreateHousingProperty.cshtml
@@ -138,7 +138,7 @@
         <button type="submit" class="btn btn-primary">Save</button>
     </div>
 
-}
+} @* Close Form *@
 
 @Scripts.Render("~/Scripts/jquery.validate.js")
 @Scripts.Render("~/Scripts/jquery.validate.unobtrusive.js")
